# mineru-service

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.full  README.md  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docker.yml
mineru_service/: __init__.py  __main__.py
scripts/: download_models.py
src/pdf_ai_service/: __init__.py
